[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Tiles/tile_0298.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/tile_0299.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tiles/tile_0328.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tiles/tile_0329.png" type="Texture" id=4]
[ext_resource path="res://Assets/Tiles/tile_0568.png" type="Texture" id=5]
[ext_resource path="res://RedWigglerEnemy.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.08959, 9.97578 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "standing",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "seg dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "seg standing",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 10.0479 )

[node name="RedWigglerEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 6 )

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FiringTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.6, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "standing"
frame = 1
playing = true

[node name="TintTween" type="Tween" parent="AnimatedSprite"]

[node name="HitCollision" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
collision_layer = 0

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitCollision"]
position = Vector2( 0.6, 0 )
shape = SubResource( 3 )

[node name="FloorRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 420 )
collision_mask = 4
collide_with_areas = true
[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_FiringTimer_timeout"]
[connection signal="area_entered" from="HitCollision" to="." method="_on_HitCollision_area_entered"]
